tests/tooling/fixtures/native/execution/positive/message_send_nonzero_immutable_global_identifier_fast_path.objc3
module MessageSendNonzeroImmutableGlobalIdentifierFastPathExecution;

let receiver = 7;
let scratch = 1;

fn main() -> i32 {
  scratch = 0;
  return [receiver ping];
}
