tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_name_trailing_extern.objc3
module MisplacedQualifierAfterParamNameTrailingExtern;

fn add(lhs: i32, rhs extern: i32) -> i32;

fn main() -> i32 {
  return 0;
}